added blockchain-related helpers functions, prepare for payment backend with solana
