# internal/interface/api/router.go
@@ -75,8 +75,7 @@ func RegisterRoutes(router *gin.Engine, db *gorm.DB) {
 		v1.POST("interviews/:id/response", interviewCtrl.SaveAgentResponseAPI)
 		v1.POST("interviews/:id/end", interviewCtrl.EndInterviewAPI)
 		v1.POST("payments/payment-intent", paymentCtrl.PaymentIntentAPI)
-		v1.POST("payments/save-card-intent", paymentCtrl.SaveCardIntentAPI)
-		v1.POST("payments/save-card", paymentCtrl.SaveCardAPI)
+		v1.POST("payments/methods", paymentCtrl.AddPaymentMethodAPI)
 		v1.POST("payments/force-charging", paymentCtrl.ForceInvestigateDuedPenaltyAPI)
 		v1.GET("payments/methods", paymentCtrl.GetAvailablePaymentMethodsAPI)
 		v1.POST("payments/methods/select-default", paymentCtrl.SelectPaymentMethodAPI)
